objects/StudentInformation__c.object
<CustomObject>
    <fields>
        <fullName>DOB__c</fullName>
        <formula>CASE(MONTH(  DateOfBirth__c  ), 
1, &quot;January&quot;, 
2, &quot;February&quot;, 
3, &quot;March&quot;, 
4, &quot;April&quot;, 
5, &quot;May&quot;, 
6, &quot;June&quot;, 
7, &quot;July&quot;, 
8, &quot;August&quot;, 
9, &quot;September&quot;, 
10, &quot;October&quot;, 
11, &quot;November&quot;, 
12, &quot;December&quot;, 
&quot;None&quot;) + &quot; &quot; + 
TEXT(DAY(DateOfBirth__c  )) + &quot; &quot; + Case(DAY( DateOfBirth__c ), 
1,&quot;st&quot;, 
2,&quot;nd&quot;, 
3,&quot;rd&quot;, 
4,&quot;th&quot;, 
5,&quot;th&quot;, 
6,&quot;th&quot;, 
7,&quot;th&quot;, 
8,&quot;th&quot;, 
9,&quot;th&quot;, 
10,&quot;th&quot;, 
11,&quot;th&quot;, 
12,&quot;th&quot;, 
13,&quot;th&quot;, 
14,&quot;th&quot;, 
15,&quot;th&quot;, 
16,&quot;th&quot;, 
17,&quot;th&quot;, 
18,&quot;th&quot;, 
19,&quot;th&quot;, 
20,&quot;th&quot;, 
21,&quot;st&quot;, 
22,&quot;nd&quot;, 
23,&quot;rd&quot;, 
24,&quot;th&quot;, 
25,&quot;th&quot;, 
26,&quot;th&quot;, 
27,&quot;th&quot;, 
28,&quot;th&quot;, 
29,&quot;th&quot;, 
30,&quot;th&quot;, 
31,&quot;st&quot;,&quot;None&quot;) + &quot; &quot; 
+ &quot;, &quot; + TEXT(YEAR( DateOfBirth__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DOB</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOJ__c</fullName>
        <formula>CASE(MONTH( DateOfJoining__c  ), 
1, &quot;January&quot;, 
2, &quot;February&quot;, 
3, &quot;March&quot;, 
4, &quot;April&quot;, 
5, &quot;May&quot;, 
6, &quot;June&quot;, 
7, &quot;July&quot;,  
8, &quot;August&quot;, 
9, &quot;September&quot;, 
10, &quot;October&quot;, 
11, &quot;November&quot;, 
12, &quot;December&quot;, 
&quot;None&quot;) + &quot; &quot; + 
TEXT(DAY( DateOfJoining__c  )) + &quot; &quot; + Case(DAY( DateOfJoining__c ),
1,&quot;st&quot;,
2,&quot;nd&quot;,
3,&quot;rd&quot;,
4,&quot;th&quot;,
5,&quot;th&quot;,
6,&quot;th&quot;,
7,&quot;th&quot;,
8,&quot;th&quot;,
9,&quot;th&quot;,
10,&quot;th&quot;,
11,&quot;th&quot;,
12,&quot;th&quot;,
13,&quot;th&quot;,
14,&quot;th&quot;,
15,&quot;th&quot;,
16,&quot;th&quot;,
17,&quot;th&quot;,
18,&quot;th&quot;,
19,&quot;th&quot;,
20,&quot;th&quot;,
21,&quot;st&quot;,
22,&quot;nd&quot;,
23,&quot;rd&quot;,
24,&quot;th&quot;,
25,&quot;th&quot;,
26,&quot;th&quot;,
27,&quot;th&quot;,
28,&quot;th&quot;,
29,&quot;th&quot;,
30,&quot;th&quot;,
31,&quot;st&quot;,&quot;None&quot;) + &quot; &quot; 
+ &quot;, &quot; + TEXT(YEAR( DateOfJoining__c  ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DOJ</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateOfBirth__c</fullName>
        <label>DateOfBirth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateOfJoining__c</fullName>
        <label>DateOfJoining</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Father_sName__c</fullName>
        <label>Father&apos;sName</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Visakhapatnam</fullName>
                </value>
                <value>
                    <fullName>Vijayanagaram</fullName>
                </value>
                <value>
                    <fullName>Srikakulam</fullName>
                </value>
                <value>
                    <fullName>Rajamundry</fullName>
                </value>
                <value>
                    <fullName>Vijayawada</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mother_sName__c</fullName>
        <label>Mother&apos;sName</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password1__c</fullName>
        <label>Password1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReTypePassword1__c</fullName>
        <label>ReTypePassword1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Semester__c</fullName>
        <label>Semester</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1st</fullName>
                </value>
                <value>
                    <fullName>2-1</fullName>
                </value>
                <value>
                    <fullName>2-2</fullName>
                </value>
                <value>
                    <fullName>3-1</fullName>
                </value>
                <value>
                    <fullName>3-2</fullName>
                </value>
                <value>
                    <fullName>4-1</fullName>
                </value>
                <value>
                    <fullName>4-2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StudentAddress__c</fullName>
        <label>StudentAddress</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UserName__c</fullName>
        <label>UserName</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>YearOfJoining__c</fullName>
        <label>YearOfJoining</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>collegeName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>collegeName</label>
        <referenceTo>college1__c</referenceTo>
        <relationshipLabel>StudentInformations</relationshipLabel>
        <relationshipName>StudentInformations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>uniqueuser__c</fullName>
        <label>uniqueuser</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>StudentInformation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>StudentName</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>StudentInformations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>